# PIE-Economics

./: .gitignore  .pre-commit-config.yaml  Manifest.toml  Manifest.toml.bak  PLAN_MAESTRO_MACRO_AI_COMP.md  PROPUESTA DE PROYECTO DE INNOVACIÓN EDUCATIVA-2.docx  Project.toml  README.md  book_extracted.txt  build_site.py  generate_dornbusch_notebook.py  generate_notebook.py  generate_p0_julia_notebook.py  generate_p1_julia_notebook.py  generate_p2_julia_notebook.py  generate_p3_julia_notebook.py  generate_p3_notebook.py  generate_p4_julia_notebook.py  generate_p4_notebook.py  generate_p5_julia_notebook.py  generate_p5_notebook.py  generate_p6_julia_notebook.py  generate_p6_notebook.py  generate_p7_julia_notebook.py  generate_p7_notebook.py  generate_p8_julia_notebook.py  generate_p8_notebook.py  generate_p9_julia_notebook.py  generate_p9_notebook.py  index.md  md_extractor.py  mkdocs.yml  pyproject.toml  requirements.txt  scratch_plot.py
docs/: DESPLIEGUE_BINDER.md  GUIA_PARA_PRINCIPIANTES.md  GUIA_PEDAGOGICA.md  PLAN_HOMOGENEIZACION_JULIA.md  PLAN_HOMOGENEIZACION_PEDAGOGICA.md  PLAN_THEBE_INTERACTIVO.md  PLAN_WEB_QUARTO.md  WIKI.md  guia-profesor.md  index.md
scratch/: appendix_j.txt  appendix_k.txt  appendix_l.txt  appendix_m.txt  appendix_n.txt  audit_notebooks.py  chapter6.txt  chapter7.txt  chapter8.txt  check_log_full.py  debug_cells.py  extract_python_files.py  find_syntax_error.py  inject_dummies_guide.py  parse_recovered.py  search_book.py  social_security_chapter.txt  test_dge_bk.py  test_dge_path_solver.py  test_dge_shoot.py  test_distortionary.py  test_fp.py  (+21 more)
(+104 files in other folders)
