[project]
name = "macroaicomp"
version = "0.1.0"
description = "Computational macroeconomics teaching materials — MACRO-AI-COMP (UMA)"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "ipywidgets",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "jupyter", "nbconvert", "nbstripout"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
